// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`listModels 1`] = `
{
  "body": "",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "GET",
  "url": "https://api.openai.com/v1/models",
}
`;

exports[`listModels 2`] = `
{
  "body": "",
  "headers": {
    "anthropic-version": "2023-06-01",
    "content-type": "application/json",
    "x-api-key": "<key>",
  },
  "method": "GET",
  "url": "https://api.anthropic.com/v1/models",
}
`;

exports[`dump 1`] = `
{
  "models": {
    "params": {},
  },
  "options": {
    "apiKey": "<key>",
  },
  "provider": "openai",
}
`;

exports[`dump 2`] = `
{
  "models": {
    "params": {},
  },
  "options": {
    "apiKey": "<key>",
  },
  "provider": "anthropic",
}
`;
